--- a/Task2_InbarGoldberg/styles/myStyle.css
+++ b/Task2_InbarGoldberg/styles/myStyle.css
@@ -1,6 +1,6 @@
 body {
     direction: rtl;
-    background-image: url("/images/brickwall.png");
+    background-image: url("../images/brickwall.png");
     background-repeat:repeat;
 }
 
